--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -21,7 +21,7 @@ footer{
 }
 
 .btnreturn{
-  display:none;
+  /*display:none;*/
 }
 
 #btnsubmit{
@@ -41,5 +41,5 @@ footer{
 #returnedurl{
   width:40%;
   height:40px;
-  display:none;
+  display:inline;
 }
