--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -7,6 +7,75 @@ footer{
   margin-top:20%;
 }
 
+form {
+  font-family: lato;
+  background: white;
+  width: 40%;
+  box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.7);
+  color: #333;
+  border-radius: 10px;
+  margin:auto;
+}
+form header {
+  background: #48689a;
+  padding: 30px 20px;
+  color: white;
+  font-size: 2em;
+  font-weight: 600;
+  border-radius: 10px 10px 0 0;
+}
+form label {
+  float:left;
+  font-size:1em;
+  letter-spacing: 0.05em;
+  display: inline-block;
+  margin-top: 30px;
+  margin-left:20px !important;
+  position: relative;
+}
+form label span {
+  color: #FF3838;
+  font-size: 2em;
+  left: 2em;
+  top: -10px;
+}
+form input {
+  display: block;
+  width: 90%;
+  margin-left: 20px;
+  padding: 5px 20px;
+  font-size: 1em;
+  border-radius: 3px;
+  outline: none;
+  border: 1px solid #ccc;
+}
+form .help {
+  margin-left: 20px;
+  font-size: 0.8em;
+  color: #777;
+}
+form button {
+  left:30px;
+  position: relative;
+  margin-top: 30px;
+  margin-bottom: 30px;
+  transform: translate(-50%, 0);
+  font-family: inherit;
+  color: white;
+  background: #48689a;
+  outline: none;
+  border: none;
+  padding: 5px 15px;
+  font-size: 1.3em;
+  font-weight: 400;
+  border-radius: 3px;
+  box-shadow: 0px 0px 10px rgba(51, 51, 51, 0.4);
+  cursor: pointer;
+  transition: all 0.15s ease-in-out;
+}
+form button:hover {
+  background: #ff5252;
+}
 
 .logo{
   height: 140px;
@@ -16,6 +85,7 @@ footer{
 }
 
 .textinput{
+  margin-top:5%;
   margin-bottom: 20px;
 
 }
